--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: The Natural Partners Project
 description: STEM and Sustainability in and through education
 author: Nick Hood
 github: https://github.com/cullaloe
-about: Interdisciplinary STEM and Sustainability ideas for teachers, by PGDE students at Moray House, Edinburgh.
+about: IDL, STEM, Sustainability.
 # disqus_shortname: stackproblems
 google_analytics: UA-29251809-4
 avatar_url: /static/img/logo.png
