--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ enableTags: true
 tagarray: []
 
 # collections:
-#   project:
-#     output: true
-#     permalink: /project/:path/
+# project:
+#   output: true
+#   permalink: /project/:path/
 
 social:
     - icon: fa-facebook
@@ -29,7 +29,7 @@ social:
 
 share:
   twitter_username: naturlpartners
-  fb_appid: 1749788565247320
+  # fb_appid: 1749788565247320
 
 urls:
     - text: About / Information
