--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ urls:
     - text: XML Feed
       url: /feed.xml
 
-url: "https://naturalpartnersproject.org/"
+url: "https://naturalpartnersproject.org"
 baseurl: ""
 paginate: 20
 per_page: 20
