GitHub Profile update

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: The Natural Partners Project
 description: STEM and Sustainability in and through education
 author: Nick Hood
-github: https://github.com/cullaloe
+github: https://github.com/NixImagery
 about: IDL, STEM, Sustainability.
 # disqus_shortname: stackproblems
 google_analytics: "UA-29251809-4"
